# minimo-simplified

./: .gitignore  CMakeLists.txt  README.md
include/: mnm.h
src/: CMakeLists.txt  mnm.cpp  mnm_api.cpp  mnm_internal.h  mnm_lib.cpp  mnm_platform.cpp  mnm_platform.mm  mnm_shaders.h
src/cmake/: add_shader_dependency.cmake  shader.h.in
src/shaders/: position_color_normal.fs  position_color_normal.vs  position_color_texcoord.fs  position_color_texcoord.vs  position_normal.fs  position_normal.vs  position_texcoord.fs  position_texcoord.vs  varying.def.sc
tools/shaderc/osx/: build.sh
tools/shaderc/windows/: build.bat
